The table argues
warden_intake has been written since the first week and nothing could reach
it. It runs now, entirely on the server.

core/ already knew who wins a node. What was missing is the half a server has
to own: who is at which table, when a node resolves, and what happens when
somebody walks off mid-sentence. Every rule in Conversations is a way a table
wedges in front of real people -- resolve on the LAST pick rather than the
first, a leaver's vote leaves with them, a departure that completes the table
resolves it on the way out, the initiator leaving ends it, and silence times
out rather than deadlocking the rest.

Participants are opaque string ids rather than players. The core engine asked
for that, and it is the whole reason this was buildable here: a container with
no game client can still drive three-way votes, ties, failed unanimity and
someone rage-quitting, because none of it needs a player object.

Talking to a Warden records WARDEN_CONTACT -- being addressed, not seeing one
-- so a world can reach band 2 by playing instead of by command.

Two core fixes fell out. Conversation.remove did not exist despite the class
comment describing exactly when a caller would need it. And stance ordering
was being discarded by Map.copyOf, which matters because who spoke first,
before the others fell in behind them, is most of what an argument reads as.

The more useful half of this pass is LESSONS #18 and #19, and neither is about
dialogue:

#18 -- one mutation reported [CAUGHT] while the assertion meant to catch it
never ran. Deleting the guard crashed the server and the log scanner caught it
instead, so the check under test was still unverified while the report said
otherwise. A mutation verifies an assertion only if the failure message is the
one that assertion produces.

#19 -- the stance-order test, in its first form, asserted one observation
against a literal. Java salts immutable-map iteration order per JVM run, so it
would have passed or failed by luck